<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/catalogFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24"
        />
    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_border_24"
        />
    <item
        android:id="@+id/cartFragment"
        android:title="@string/cart"
        android:icon="@drawable/ic_outline_shopping_cart_24"
        />
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_outline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        />
</menu>