<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.newcustomer.NewCustomerFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/process_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/prime_400"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:indeterminate="true"/>
    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/customer_information"
        app:layout_constraintBottom_toTopOf="@+id/tf_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12"/>
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ho_va_ten"
        app:hintAnimationEnabled="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/prime_500"
        app:hintTextColor="@color/prime_500"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/mtrl_ic_error"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        style="@style/FilledBoxColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light_normal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_vn"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tf_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/prime_500"
        style="@style/FilledBoxColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sdt"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tf_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
        app:startIconTint="@color/prime_500"
        style="@style/FilledBoxColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_address_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dia_chi"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tf_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:startIconDrawable="@drawable/ic_baseline_home_24"
        app:startIconTint="@color/prime_500"
        style="@style/FilledBoxColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_address_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/thanh_pho"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tf_address_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tf_address_postal"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:layout_constraintHorizontal_weight="2"
        app:startIconDrawable="@drawable/ic_baseline_location_city_24"
        app:startIconTint="@color/prime_500"
        style="@style/FilledBoxColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_address_postal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/m_v_ng"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tf_address_line"
        app:layout_constraintStart_toEndOf="@id/tf_address_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        style="@style/FilledBoxColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address_postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:inputType="number"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ti_p_t_c"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:elevation="1dp"
        android:backgroundTint="@color/prime_500"
        app:icon="@drawable/ic_baseline_post_add_24"
        app:layout_constraintTop_toBottomOf="@id/tf_address_postal"
        app:layout_constraintBottom_toTopOf="@id/iv_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/iv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/bt_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/klein"/>

</androidx.constraintlayout.widget.ConstraintLayout>