<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.method.PaymentMethodFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_tiep_tuc_dat_hang_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:text="@string/tiep_tuc_dat_hang"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:elevation="4dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_tiep_tuc_dat_hang_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:text="@string/tiep_tuc_dat_hang"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/phuong_thuc_thanh_toan"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/devider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_method" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="34dp"
            android:layout_height="200dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:checkedButton="@id/button_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_method">

            <RadioButton
                android:buttonTint="@color/colorAccent"
                android:id="@+id/button_card"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />

            <RadioButton
                android:id="@+id/button_cnc"
                android:buttonTint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_method_credit_card"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/thanh_toan_tin_dung"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/devider1" />

        <TextView
            android:id="@+id/devider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_method_credit_card" />

        <TextView
            android:id="@+id/tv_cnc"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/thanh_toan_cnc"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/devider2" />

        <TextView
            android:id="@+id/devider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cnc" />

        <TextView
            android:id="@+id/tv_thong_tin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@drawable/textview_border_orange"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingStart="10dp"
            android:paddingTop="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textSize="@dimen/description"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/devider3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="431dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

